# volumetrius

./: Cargo.toml  README.md
res/: old_knight.vox
src/: camera.rs  chunk.rs  control.rs  main.rs  object.rs  renderer.rs  shape.rs
src/backend/: blit.rs  ctx.rs  dbg.rs  mod.rs  ray_tracer.rs
src/shaders/: compute.wgsl  dbg_shader.wgsl  shader.wgsl
