[package]
name = "volumetrius"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "22.1.0"
winit = "0.30.5"

bytemuck = { version = "1.18.0", features = [ "derive" ] }
pollster = "0.3.0"
hashbrown = "0.14.5"
strum = { version = "0.26.3", features = ["derive"] }
nalgebra = "0.33.0"
bvh = "0.10.0"
dot_vox = "5.1.1"
rayon = "1.10.0"
flume = "0.11.0"

log = "0.4.22"
env_logger = "0.11.5"

[profile.flamegraph]
inherits = "release"
debug = true

[profile.flamegraph_no_inline]
inherits = "release"
debug = true
opt-level=0